@@ -6,12 +6,10 @@ AM_CFLAGS = $(LIBEPC_CFLAGS) -Wall \
 AM_LDFLAGS = $(LIBEPC_LIBS)
 
 lib_LTLIBRARIES = \
-	libepc/libeasy-publish-consume.la
-
+	libepc/libepc.la
 noinst_PROGRAMS = \
 	tests/test-publisher \
 	tests/test-consumer
-
 libepc_include_HEADERS = \
 	libepc/consumer.h \
 	libepc/dispatcher.h \
@@ -19,16 +17,16 @@ libepc_include_HEADERS = \
 pkgconfig_DATA = \
 	libepc.pc
 
-libepc_libeasy_publish_consume_la_SOURCES = \
+libepc_libepc_la_SOURCES = \
 	libepc/consumer.c \
 	libepc/dispatcher.c \
 	libepc/publisher.c \
 	$(libepc_HEADERS)
 
-tests_test_publisher_LDADD = libepc/libeasy-publish-consume.la
+tests_test_publisher_LDADD = libepc/libepc.la
 
 tests_test_consumer_CFLAGS = $(AM_CFLAGS) $(AVAHIUI_CFLAGS)
-tests_test_consumer_LDADD = libepc/libeasy-publish-consume.la $(AVAHIUI_LIBS)
+tests_test_consumer_LDADD = libepc/libepc.la $(AVAHIUI_LIBS)
 
 libepc_includedir = $(includedir)/libepc
 pkgconfigdir = $(libdir)/pkgconfig
